[project]
name = "comfyui-simplefeed"
description = "A lightweight image tray forked from Comfy-UI-CustomScripts with simple sorting, positioning and filtering options."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/tachyon-beep/comfyui-simplefeed"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-simplefeed"
Icon = ""
